# robomaster

./: README.md  package.xml  test.cpp  test10full.cpp  test10part.cpp  test11full.cpp  test11part.cpp  test2.cpp  test3.cpp  test6.cpp  test7.cpp  test8.cpp
Vision/install/: local_setup.sh  setup.sh
Vision/install/player_pkg/lib/player_pkg/: TestNode
Vision/install/player_pkg/share/ament_index/resource_index/parent_prefix_path/: player_pkg
Vision/install/player_pkg/share/player_pkg/: local_setup.sh  package.sh
Vision/log/: latest_build  latest_list
Vision/results/: TEAMENAME_results0.json  TEAMENAME_results0.json.sha256
Vision/src/player_pkg/src/: test.cpp
install/teamX_challenge/share/teamX_challenge/: package.dsv  package.ps1
log/: latest_build
qt_ros2_tool/include/: main_window.hpp  test1.hpp
qt_ros2_tool/src/: main_window.cpp
results/: TEAM7_results1.json  TEAM7_results1.json.sha256
robot/: CMakeLists.txt
teamX_challenge/config/: params.yaml
teamX_challenge/install/: local_setup.sh  setup.sh
teamX_challenge/launch/: shooter.launch.py  vision.launch.py
teamX_challenge/log/: latest_build
teamX_challenge/results/: TEAMENAME_results0.json  TEAMENAME_results0.json.sha256  TEAMENAME_results0.jsonarmor.sha256  TEAMENAME_results0armor.json  TEAMENAME_results0rect.json  TEAMENAME_results0rect.json.sha256  TEAMENAME_results0sphere.json  TEAMENAME_results0sphere.json.sha256
teamX_challenge/src/: decision_node.cpp  test.cpp
temp/: test.cpp
tmp/: README.md  test1.cpp  test10.cpp  test10full.cpp  test10part.cpp  test11full.cpp  test11part.cpp  test4.cpp  test5.cpp  test9.cpp
tmp/Vision/install/: local_setup.sh  setup.sh
tmp/Vision/results/: TEAMENAME_results0.json  TEAMENAME_results0.json.sha256
tmp/config/: params.yaml
tmp/install/: local_setup.sh  setup.sh
tmp/install/teamX_challenge/share/teamX_challenge/: package.bash  package.sh  package.zsh
tmp/qt_ros2_tool/: CMakeLists.txt  package.xml
tmp/qt_ros2_tool/include/: test1.h
tmp/qt_ros2_tool/src/: hit.cpp  main.cpp
tmp/qt_ros2_tool/ui/: test1.ui
tmp/robot/src/: test.cpp
tmp/teamX_challenge/: CMakeLists.txt
tmp/teamX_challenge/launch/: combined.launch.py
tmp/teamX_challenge/src/: shooter_node.cpp  vision_node.cpp
